# deposit-app

./: .coverage  Dockerfile  docker-compose.yml  pyproject.toml  test.db
app/: main.py  schemas.py
app/api/: routes.py
app/core/: utils.py
app/db/: database.py  models.py
tests/: test_models.py  test_routes.py  test_utils.py
